@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.373 2005/09/05 16:56:49 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.374 2005/09/05 18:23:56 agaffney Exp $
 
 *GLI-0.2 (4 Aug 2005)
 
@@ -10,6 +10,7 @@
   add get_directory_listing_from_uri()
   add http support to above
   add ftp support to above
+  add scp support to above
   src/GLIArchitectureTemplate.py:
   "0" instead of 0 for key of single-element dict passed to _edit_config()
 
